# cmc-hackathon-agent

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
deploy/: DEPLOY.md  cmc-agent.service  cmc-dashboard.service  setup-vps.sh
src/agent/: alerts.py  backtest.py  config.py  dashboard.py  identity.py  narrator.py  review.py  runner.py  x402.py
src/agent/data/: cmc.py  store.py
src/agent/execution/: paper.py  pending.py  portfolio.py  twak.py
src/agent/record/: journal.py
src/agent/risk/: engine.py
src/agent/signals/: indicators.py
src/agent/strategy/: __init__.py  adaptive.py  mean_revert.py  momentum.py
tests/: conftest.py  test_adaptive.py  test_crash_safety.py  test_daily_floor.py  test_indicators.py  test_narrator.py  test_ohlcv_warmstart.py  test_review.py  test_risk.py  test_safety_guards.py  test_self_review_card.py  test_strategy.py  test_twak.py  test_x402.py
