[project]
name = "cmc-hackathon-agent"
version = "0.1.0"
description = "Autonomous BSC trading agent — CMC x Trust Wallet x BNB Chain hackathon, Track 1"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "bnbagent>=0.3.6",
    "anthropic>=0.92",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
